# BciExample

./: .gitmodules  CMakeLists.txt  example.cc
include/: bci_model.h
src/: bci_model.cc  bci_model_test.cc
